hphp/hack/test/typecheck/references/strict_pass_by_reference1.php
<?hh // strict

function test(array<int> $arr): void {
  sort(&$arr);
}
